--- a/Mission06_Tait/Views/Home/EnterMovies.cshtml
+++ b/Mission06_Tait/Views/Home/EnterMovies.cshtml
@@ -1,19 +1,19 @@
-﻿@model Movie
+﻿@model Movies
 
 <!--Create the movie page to enter movie info-->
 <h2>Time to enter some movies! </h2>
 
 <form method="post">
 
-    <label asp-for="Category">Category</label>
-    <select asp-for="Category">
-        <option value="Action/Adventure">Action/Adventure</option>
-        <option value="Comedy">Comedy</option>
-        <option value="Drama">Drama</option>
-        <option value="Family">Family</option>
-        <option value="Horror/Suspense">Horror/Suspense</option>
-        <option value="Television">Television</option>
-        <option value="Misc">Miscellaneous</option>
+    <input type="hidden" asp-for="MovieId" />
+
+    <br />
+    <select asp-for="CategoryId">
+        <option value="">Select a Category</option>
+        @foreach (Categories c in ViewBag.Categories)
+        {
+            <option value="@c.CategoryId">@c.Category</option>
+        }
     </select>
     <br /> <br />
 
@@ -50,9 +50,20 @@
     <input asp-for="LentTo" />
     <br /> <br />
 
+    <label asp-for="CopiedToPlex">Copied to Plex</label>
+    <select asp-for="Edited">
+        <option value="true">Yes</option>
+        <option value="false">No</option>
+    </select>
+    <br /> <br />
+
     <label asp-for="Notes">Notes:</label>
     <input asp-for="Notes" maxlength="25"/>
     <br /> <br />
 
     <button type="submit">Submit</button>
+
+    <!--prints out error messages-->
+    <div asp-validation-summary="All"></div>
+
 </form>
